--- a/package.json
+++ b/package.json
@@ -17,12 +17,7 @@
   },
   "homepage": "https://github.com/luis-puhl/DeviceAwareBuilding-web#readme",
   "dependencies": {
-    "express-ws": "^3.0.0",
-    "http": "0.0.0",
-    "mqtt": "^2.2.1",
-    "node-static": "^0.7.9",
-    "socketio": "^1.0.0",
-    "util": "^0.10.3",
+    "express": "^4.14.1",
     "websocket": "^1.0.24"
   }
 }
