--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
     "express": "^4.14.1",
     "mqtt": "^2.4.0",
     "websocket": "^1.0.24"
+  },
+  "devDependencies": {
+    "eslint": "^3.16.1",
+    "eslint-config-google": "^0.7.1"
   }
 }
