Now eslint has no erros (good config?!)

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,8 +3,7 @@
         "browser": true,
         "node": true,
         "commonjs": true,
-        "es6": true,
-        "shared-node-browser": true
+        "es6": true
     },
     "extends": "eslint:recommended",
     "parserOptions": {
